2010-06-29  Timothee Groleau <kde@timotheegroleau.com>

	* S3/ACL.py: Fix isAnonRead method on Grantees
	* ChangeLog: Update name of contributor for Timothee Groleau

2010-06-13  Michal Ludvig  <mludvig@logix.net.nz>

	* s3cmd, S3/CloudFront.py: Both [accesslog] and [cfmodify] 
	  access logging can now be disabled with --no-access-logging

2010-06-13  Michal Ludvig  <mludvig@logix.net.nz>

	* S3/CloudFront.py: Allow s3:// URI as well as cf:// URI 
	  for most CloudFront-related commands.

2010-06-12  Michal Ludvig  <mludvig@logix.net.nz>

	* s3cmd, S3/CloudFront.py, S3/Config.py: Support access 
	  logging for CloudFront distributions.
	* S3/S3.py, S3/Utils.py: Moved some functions to Utils.py
	  to make them available to CloudFront.py
	* NEWS: Document the above.

2010-05-27  Michal Ludvig  <mludvig@logix.net.nz>

	* S3/S3.py: Fix bucket listing for buckets with
	  over 1000 prefixes. (contributed by Timothee Groleau)
	* S3/S3.py: Fixed code formating.

2010-05-21  Michal Ludvig  <mludvig@logix.net.nz>

	* s3cmd, S3/S3.py: Added support for bucket locations
	  outside US/EU (i.e. us-west-1 and ap-southeast-1 as of now).

2010-05-21  Michal Ludvig  <mludvig@logix.net.nz>

	* s3cmd, S3/S3.py, S3/Config.py: Added --reduced-redundancy
	  switch for Reduced Redundancy Storage.

2010-05-20  Michal Ludvig  <mludvig@logix.net.nz>

	* s3cmd, S3/ACL.py, S3/Config.py: Support for --acl-grant
	  and --acl-revoke (contributed by Timothee Groleau)
	* s3cmd: Couple of fixes on top of the above commit.
	* s3cmd: Pre-parse ACL parameters in OptionS3ACL()

2010-05-20  Michal Ludvig  <mludvig@logix.net.nz>

	* S3/Exceptions.py, S3/S3.py: Some HTTP_400 exceptions 
	  are retriable.

2010-03-19  Michal Ludvig  <mludvig@logix.net.nz>

	* s3cmd, S3/ACL.py: Print all ACLs for a Grantee
	(one Grantee can have multiple different Grant entries)

2010-03-19  Michal Ludvig  <mludvig@logix.net.nz>

	* s3cmd: Enable bucket-level ACL setting